<resources>
    <string name="app_name">SafetyApp</string>
    <string name="hello_world">Hello World......!</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="demo">Demo</string>
    <string name="safe">Safe</string>
    <string name="help">Help</string>
    <string name="portal">Portal</string>
    <string name="jone_gmail_com">jone@gmail.com</string>
    <string name="name">Jone Doe</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="log_out">Log Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="save_details">Save Details</string>
    <string name="forget_password">Forget Password</string>
    <string name="welcome">WELCOME</string>
    <string name="navigate_me">Navigate Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender">Gender</string>
    <string name="eme_text">This will activate alert from your device and your location will be shared with nearby users and your emergency contacts</string>
    <string name="warning">This Service shall only be used by needy at a time of emergency</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="press_power_lock_nbutton_5_times">Press Power/Lock\nbutton 5 Times</string>

    <string name="info_para_1">In the emerging era of the internet, people all over the world are connected to each other. In today’s world each and every person owns a personal mobile device. Even though technology has made major contributions towards the development of the human era, Crimes have increased either way, through the internet or physical. Although internet crimes are taken care of by cybersecurity, major steps have not been taken for physical crimes.</string>
    <string name="info_para_2">Rapid helps you to defend yourself with just a few clicks on your Mobile Device.</string>
    <string name="sub_para_2">- Choose your Trusted contacts and seek help from the nearest Rapid users.</string>
    <string name="sub_para2_1">- Activate the Alert with just 5 clicks of your Power button.</string>
    <string name="contactname_9876543210">ContactName(9876543210)</string>
    <string name="referal">referal</string>
    <string name="contacts">Contacts</string>
    <string name="selected_contact_number_display_here">Selected Contact Number Display Here</string>
    <string name="selected_contact_name_display_here">Selected Contact Name Display Here</string>
    <string name="logo">LOGO</string>
    <string name="next">Next</string>
    <string name="rapid_the_safety_app">Rapid : The Safety App</string>
    <string name="try_not_to_hold_back_to_be_a_casualty">Try not to hold back to be a Casualty!</string>
    <string name="with_rapid_you_can">With Rapid you can:</string>
    <string name="anjitha_email">anjitha3021@gmail.com</string>
    <string name="_3_anjitha_t_raj">3. Anjitha T Raj</string>
    <string name="hitesh_email">hitesh@globeweb.in</string>
    <string name="_2_hitesh_darji">2. Hitesh Darji</string>
    <string name="mohanish_email">mohanishp1@gmail.com</string>
    <string name="_1_mohanish_patel">1. Mohanish Patel</string>
    <string name="developer_details">Developer Details:</string>
    <string name="for_additional_safety_measures_the_alert_will_be_sent_to_government_bodies_like_police_ambulance_fire_brigade">- For additional safety measures, the alert will be sent to Government bodies like, Police, Ambulance, Fire Brigade.</string>
    <string name="after_the_victim_is_rescued_the_groups_are_notified_by_the_victim_themselves_through_the_safe_unsafe_button_provided">- After the victim is rescued, the groups are notified by the victim themselves, through the Safe/Unsafe button provided.</string>
    <string name="the_nearby_groups_will_receive_the_alert_and_the_location_of_the_victim_which_will_allow_them_to_volunteer_to_help_the_targeted_victim">- The nearby groups will receive the alert and the location of the victim which will allow them to volunteer to help the targeted victim.</string>
    <string name="system_will_receive_the_alert_and_broadcast_the_victim_s_information_and_location_to_the_group_nearby_within_a_range_of_3km">- System will receive the alert and broadcast the victim’s information and location to the group nearby within a range of 3km.</string>
    <string name="victim_will_click_the_power_button_of_their_mobile_devices_5_times_letting_the_screen_on_and_off_frequently_till_the_alarm_goes_on">- Victim will click the Power Button of their mobile devices 5 times, letting the screen on and off frequently, till the alarm goes on.</string>
    <string name="how_does_rapid_work">How does Rapid work?</string>
    <string name="the_routes_which_are_displayed_to_reach_to_the_triggered_user_it_is_redirected_to_google_maps_providing_the_easiest_and_shortest_route">- The routes which are displayed to reach to the triggered User, it is redirected to Google Maps providing the easiest and shortest route.</string>
    <string name="question_mark">\?</string>
    <string name="mode_icon">mode_icon</string>
    <string name="mode_private">MODE | PRIVATE</string>
    <string name="tutorial_icon">tutorial_icon</string>
    <string name="tutorial">TUTORIAL</string>
    <string name="_1">1</string>
    <string name="help_request">HELP REQUEST</string>
    <string name="info">INFO</string>
    <string name="info_logo">info_logo</string>
    <string name="portal_icon">portal_icon</string>
    <string name="verify_number">Verify Number</string>
    <string name="send_invitation_link">Send Invitation Link</string>
    <string name="verify_contact">Verify Contact</string>
    <string name="select_contact">Select Contact</string>
    <string name="textview">TextView</string>

    <string-array name="report_reason">
        <item>Duplicate or Fake Account</item>
        <item>Misleading Information</item>
        <item>Constant Fake Alarms</item>
        <item>Misbehaviour</item>
    </string-array>

</resources>
