<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707">


    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="77dp"
        android:background="@drawable/name"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:layout_marginTop="16dp"
        android:id="@+id/email"
        android:layout_below="@id/name"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:background="@drawable/email"
        android:gravity="center"/>

    <EditText
        android:layout_centerInParent="true"
        android:layout_below="@id/email"
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/enter_your_email"
        android:textColorHint="#FFFFFF"
        android:background="@drawable/passfield"
        android:gravity="center"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_centerInParent="true"
        android:layout_below="@id/password"
        android:background="@drawable/button"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"/>


</RelativeLayout>