<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.profile"
    android:orientation="vertical">


    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:id="@+id/header">

        <ImageView
            android:layout_marginTop="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/photo"
            android:contentDescription="TODO" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textColor="#FFFFFF"
            android:textSize="21sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:background="@color/colorPrimary">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/name"
            android:hint="@string/name"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:id="@+id/editname"
            android:textColor="@color/white"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/email"
            android:layout_below="@id/editname"
            android:hint="@string/enter_your_email"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:id="@+id/editemail"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/editpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/enter_new_password"
            android:background="@drawable/passfield"
            android:layout_below="@id/editemail"
            android:layout_centerHorizontal="true"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:layout_marginTop="24dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editpass"
            android:background="@drawable/button"
            android:text="@string/save_details"
            android:gravity="center"
            android:id="@+id/editbutton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"/>



    </RelativeLayout>
</LinearLayout>